--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solidity-starter",
+  "name": "proxy-openzeppelin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
